Fixed learning log title wrapping [#160797339]

--- a/src/components/workspace.sass
+++ b/src/components/workspace.sass
@@ -29,8 +29,11 @@
     .title
       flex-grow: 1
       text-align: center
-      margin: $margin 0
+      padding: $margin
       font-weight: bold
+      white-space: nowrap
+      overflow: hidden
+      text-overflow: ellipsis
 
     .actions
       flex-grow: 0
